# mu

./: .gitignore  .golangci.yml  AGENTS.md  Cargo.toml  DEFAULT_INSTRUCTIONS.md  PLAN.md  README.md  go.mod  go.sum  main.go  tools.go  tools_test.go
agent/: footer.go  footer_test.go  loop.go  loop_test.go
api/: api.go  client.go  models.go
docs/superpowers/specs/: subagents-design.md
events/: events.go
logging/: logger.go
render/: terminal.go  terminal_test.go
src/: DEFAULT_INSTRUCTIONS.md  json_frontend.rs  main.rs  theme.rs  ui.rs  wrap.rs
src/api/: client.rs  types.rs
tools/: tools.go  tools_test.go
