[package]
name = "mu"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2024"
rust-version = "1.96"

[features]
default = []
# Enables tokio-console support.  When enabled, `RUSTFLAGS="--cfg tokio_unstable"`
# is automatically injected via a build script so you do not need to set it
# yourself.
console = ["console-subscriber"]

[dependencies]
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
async-openai = { version = "0.41.1", features = ["chat-completion"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
tui-scrollview = "0.6.7"
ratatui = "0.30.2"
crossterm = "0.29.0"
color-eyre = "0.6.5"
unicode-width = "0.2.2"
tokio-util = { version = "0.7.18" }
console-subscriber = { version = "0.5.0", optional = true }
reqwest = "0.12"
readabilityrs = "0.1.3"
