[package]
name = "mu"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2024"
rust-version = "1.96"

[features]
default = ["tui"]
# Enables tokio-console support.  When enabled, `RUSTFLAGS="--cfg tokio_unstable"`
# is automatically injected via a build script so you do not need to set it
# yourself.
console = ["console-subscriber"]
# Terminal user interface (the default frontend).
tui = ["ratatui", "crossterm", "tui-scrollview", "unicode-width"]
# JSON-RPC HTTP server frontend (for programmatic / agent usage).
json = ["dep:axum", "dep:serde"]

[dependencies]
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "net",
] }
async-openai = { version = "0.41.1", features = ["chat-completion"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
color-eyre = "0.6.5"
tokio-util = { version = "0.7.18" }
console-subscriber = { version = "0.5.0", optional = true }
reqwest = "0.12"
readabilityrs = "0.1.3"

# TUI frontend (optional)
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", optional = true }
tui-scrollview = { version = "0.6.7", optional = true }
unicode-width = { version = "0.2.2", optional = true }

# JSON-RPC frontend (optional)
axum = { version = "0.8.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
